[package]
name = "stellink-escrow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stellink — minimal Soroban escrow registry for Stellar payment links."

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "21.7", features = ["testutils"] }
